Blackpurl/src/objects/Form__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Edit_Modal_Name__c</fullName>
        <description>If Form is an Editable form, this field will decide which modal to use for data population over that form</description>
        <label>Edit Modal Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW DEAL UNIT</fullName>
                </value>
                <value>
                    <fullName>USED DEAL UNIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Edit_Config__c</fullName>
        <description>JSON config representing X, Y Coordinates for Form</description>
        <label>Form Edit Config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grouping_Name__c</fullName>
        <label>Grouping Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deal</fullName>
                </value>
                <value>
                    <fullName>Financing</fullName>
                </value>
                <value>
                    <fullName>Vendor product</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PDF Form is Editable or not</description>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Manual_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Manual Upload</label>
        <type>Checkbox</type>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>